<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_outline"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />

    <item
        android:id="@+id/placeholder"
        android:title=""/>

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_list_alt"
        app:iconTint="@color/black"
        android:title="@string/orders" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications"
        app:iconTint="@color/black"
        android:title="@string/notif" />

</menu>