<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.directpaymentproof.DirectPaymentProofActivity">

    <TextView
        android:id="@+id/title_page_payment_proof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_proof"
        style="@style/Text.Headline.Medium"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/subtitle_page_payment_proof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_here"
        style="@style/Text.Body.Medium"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_page_payment_proof"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_img_proof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/subtitle_page_payment_proof"
        app:strokeColor="@color/placeholder_gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_payment_proof"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@color/placeholder_gray"
                app:layout_constraintDimensionRatio="H,1:1.2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_upload_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/upload_picture"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/card_img_proof"
        app:layout_constraintEnd_toEndOf="@id/card_img_proof"
        app:layout_constraintStart_toStartOf="@id/card_img_proof"
        app:layout_constraintTop_toTopOf="@id/card_img_proof"
        app:drawableStartCompat="@drawable/ic_baseline_photo_library_24" />

    <Button
        android:id="@+id/btn_upload_proof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>